PROJECT(cfs)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
set(CMAKE_VERBOSE OFF CACHE BOOL "Verbose mode")
if(CMAKE_VERBOSE)
    set(CMAKE_VERBOSE_MAKEFILE 1)
endif()
if (WIN32 AND ${CMAKE_GENERATOR} MATCHES "(MinGW)|(MSYS)")
    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -DANN_NO_RANDOM" CACHE STRING "")
	set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG -DANN_NO_RANDOM" CACHE STRING "")
	
endif()
#set(CMAKE_LIBRARY_PATH "${CMAKE_LIBRARY_PATH} ../ANN")
INCLUDE_DIRECTORIES(C:/include)
LINK_DIRECTORIES(c:/lib)
#ADD_LIBRARY(ANN)
FIND_PACKAGE(OpenCV REQUIRED)
ADD_EXECUTABLE(${PROJECT_NAME} cfs64.cpp LoOP.cpp erf.cpp Xgetopt.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS} ANN)
